--- a/CSS/main.css
+++ b/CSS/main.css
@@ -473,6 +473,9 @@ font-size: 1rem;
         width: 80%;
     }
 }
+.other h2{
+    padding: 1em 1.2em;;
+}
 
 .project-grid {
     z-index: 6;
@@ -840,7 +843,7 @@ letter-spacing: 0.0175rem;
 .project-container {
     margin: 18em 0em 0em 0em;
     @media only screen and (min-width: 600px) {
-        margin: 18em 0em 0em 0em;
+        margin: 4em 0em 0em 0em;
         width: 100%;
     }
 
@@ -849,6 +852,7 @@ letter-spacing: 0.0175rem;
 
 .project-container h1{
     margin: 1em;
+    text-align: center;
 }
 .one-margin {
     margin-left: 1.2em;
@@ -978,6 +982,7 @@ nav {
     flex-wrap: wrap;
     align-items: anchor-center;
     justify-content: space-around;
+
 }
 
 .pages-links{
@@ -1037,7 +1042,7 @@ footer .socials {
 .footer-content {
     padding: 1em .5em;
     @media only screen and (min-width: 600px) {
-        padding: 2em 6em;
+        padding: 2em 2em;
     }
 }
 
