--- a/CSS/main.css
+++ b/CSS/main.css
@@ -749,6 +749,12 @@ letter-spacing: 0.0175rem;
         }
 }
 
+.about-img{
+    width: auto;
+    border:rgb(161, 165, 203) 1em inset; 
+    border-radius: 10%;
+}
+
 .about {
     margin: 6em 0 0 0;
     padding: 2em;
