--- a/CSS/main.css
+++ b/CSS/main.css
@@ -532,7 +532,7 @@ font-style: normal;
 font-weight: 400;
 line-height: 120%; /* 4.8rem */
 letter-spacing: -0.08rem;
-color: var(--background-color-header-two);
+color: var(--background-color-header);
     @media only screen and (min-width: 600px) {
     font-size: 4.5rem;
     margin: 0 0 .5em 0;
@@ -750,9 +750,9 @@ letter-spacing: 0.0175rem;
 }
 
 .about-img{
-    width: auto;
+    /* width: auto;
     border:rgb(161, 165, 203) 1em inset; 
-    border-radius: 10%;
+    border-radius: 10%; */
 }
 
 .about {
